tests/baselines/reference/_caxnc-ez0009.errors.txt
tests/cases/conformance/_caxnc/_caxnc-ez0009.ts(9,25): error TS2769: No overload matches this call.
  Overload 1 of 2, '(b: string): "1" | undefined', gave the following error.
    Argument of type 'string | number' is not assignable to parameter of type 'string'.
      Type 'number' is not assignable to type 'string'.
  Overload 2 of 2, '(b: number): false | undefined', gave the following error.
    Argument of type 'string | number' is not assignable to parameter of type 'number'.
      Type 'string' is not assignable to type 'number'.
tests/cases/conformance/_caxnc/_caxnc-ez0009.ts(15,24): error TS2769: No overload matches this call.
  Overload 1 of 2, '(b: string): "1"', gave the following error.
    Argument of type 'string | number' is not assignable to parameter of type 'string'.
      Type 'number' is not assignable to type 'string'.
  Overload 2 of 2, '(b: number): false', gave the following error.
    Argument of type 'string | number' is not assignable to parameter of type 'number'.
      Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/_caxnc/_caxnc-ez0009.ts (2 errors) ====
    declare interface FooA {
        foo(b:string): "1",
        foo(b:number): false;
    };
    declare const obja: undefined | FooA;
    declare const arg: string | number;
    
    // checknig isFoo in combo with another condition argIsString
    const isFoo = obja?.foo(arg);
                            ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(b: string): "1" | undefined', gave the following error.
!!! error TS2769:     Argument of type 'string | number' is not assignable to parameter of type 'string'.
!!! error TS2769:       Type 'number' is not assignable to type 'string'.
!!! error TS2769:   Overload 2 of 2, '(b: number): false | undefined', gave the following error.
!!! error TS2769:     Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2769:       Type 'string' is not assignable to type 'number'.
    const argIsString = typeof arg === "string";
    if (isFoo){
        //
    }
    else if (obja) {
        const y = obja.foo(arg);
                           ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(b: string): "1"', gave the following error.
!!! error TS2769:     Argument of type 'string | number' is not assignable to parameter of type 'string'.
!!! error TS2769:       Type 'number' is not assignable to type 'string'.
!!! error TS2769:   Overload 2 of 2, '(b: number): false', gave the following error.
!!! error TS2769:     Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2769:       Type 'string' is not assignable to type 'number'.
    }
    